apps/insecure-reveal-env-variables/insecure-reveal-env-variables-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insecure-reveal-env-variables
  namespace: insecure-reveal-env-variables
  labels:
    name: insecure-reveal-env-variables
    app: insecure-reveal-env-variables
spec:
  replicas: 1
  selector:
    matchLabels:
      name: insecure-reveal-env-variables
  template:
    metadata:
      labels:
        name: insecure-reveal-env-variables
    spec:
      containers:
      - name: insecure-reveal-env-variables
        image: aljorhythm/insecure-reveal-env-variables:main-1651743242-312e334 # {"$imagepolicy": "flux-system:insecure-reveal-env-variables-image-policy"}
        ports:
        - containerPort: 8080
