apps/insecure-reveal-env-variables/insecure-reveal-env-variables-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insecure-reveal-env-variables-ingress
  namespace: insecure-reveal-env-variables
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  -  http:
       paths:
         - pathType: Prefix
           path: "/insecure" 
           backend:
             service:
               name: insecure-reveal-env-variables
               port:
                 number: 80
